widget: Update IM cursor position after scrolling

https://bugzilla.gnome.org/show_bug.cgi?id=756141